# catboost

./: .appveyor.yml  .bazelrc  .gitattributes  .gitignore  .gitlab-ci.yml  .mapping.json  .piglet-meta.json  .travis.yml  AI_Build.py  AUTHORS  AWESOME.md  BUILD.bazel  CATBOOST_OVERVIEW.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.android-arm.txt  CMakeLists.android-arm64.txt  CMakeLists.android-x86.txt  CMakeLists.darwin.txt  CMakeLists.linux-aarch64-cuda.txt  CMakeLists.linux-ppc64le-cuda.txt  CMakeLists.linux-ppc64le.txt  CMakeLists.linux-x86_64-cuda.txt  CMakeLists.linux.txt  CMakeLists.txt  CMakeLists.windows-x86_64-cuda.txt  CMakeLists.windows-x86_64.txt  CMakeUserPresets.json  CONTRIBUTING.md  CPP_STYLE_GUIDE.md  ISSUE_TEMPLATE.md  LICENSE  MODULE.bazel  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE.md  SECURITY.md  WORKSPACE  ai_optimized.py  (+13 more)
bazel/compat/: BUILD.bazel  stlfwd
catboost/R-package/: .Rbuildignore  .gitignore  .lintr  CMakeLists.darwin-arm64.txt  CMakeLists.darwin.txt  CMakeLists.linux-aarch64-cuda.txt  CMakeLists.linux-ppc64le-cuda.txt  CMakeLists.linux-x86_64.txt  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac  configure.win  cran-comments.md  mk_package.py  prologue.cmake  test.py  ya.make
catboost/mlx/: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  train_api.cpp  train_api.h
catboost/python-package/: CMakeLists.darwin-arm64.txt  CMakeLists.darwin.txt  CMakeLists.linux-aarch64.txt  CMakeLists.linux-ppc64le-cuda.txt  CMakeLists.linux-ppc64le.txt  CMakeLists.txt  README.md  mk_wheel.py  pyproject.toml  setup.py  ya.make
catboost/rust-package/: CHANGELOG.md  Cargo.toml  README.md  xgb_compat.rs
python/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  build_binaries.py  pyproject.toml  setup.py
python/benchmarks/: README.md  benchmark.py  benchmark_vs_catboost.py
python/catboost_mlx/: __init__.py  _predict_utils.py  _tree_utils.py  _utils.py  core.py  export_coreml.py  export_onnx.py  pool.py
python/tests/: conftest.py  test_basic.py  test_nanobind_parity.py  test_new_features.py  test_qa_adversarial.py  test_qa_round10_sprint5_bench_and_scan.py  test_qa_round11_sprint8_library_losses.py  test_qa_round12_sprint9.py  test_qa_round13_sprint10.py  test_qa_round14_sprint11_nanobind.py  test_qa_round2.py  test_qa_round3.py  test_qa_round4.py  test_qa_round5.py  test_qa_round6.py  test_qa_round7.py  test_qa_round8_sprint3_losses.py  test_qa_round9_sprint4_partition_layout.py  test_ranking_nanobind.py
util/: BUILD.bazel  CMakeLists.android-arm.txt  CMakeLists.android-arm64.txt  CMakeLists.android-x86.txt  CMakeLists.android-x86_64.txt  CMakeLists.darwin-arm64.txt  CMakeLists.darwin-x86_64.txt  CMakeLists.darwin.txt  CMakeLists.linux-aarch64-cuda.txt  CMakeLists.linux-aarch64.txt  CMakeLists.linux-ppc64le-cuda.txt  CMakeLists.linux-ppc64le.txt  CMakeLists.linux-x86_64-cuda.txt  CMakeLists.linux-x86_64.txt  CMakeLists.linux.txt  CMakeLists.windows-x86_64-cuda.txt  CMakeLists.windows-x86_64.txt  README.md  a.yaml  str_stl.cpp  str_stl.h  ya.make  ysafeptr.cpp  ysafeptr.h  ysafeptr_ut.cpp  ysaveload.cpp  ysaveload.h  ysaveload_ut.cpp
util/charset/: BUILD.bazel  CMakeLists.android-arm.txt  CMakeLists.android-arm64.txt  CMakeLists.android-x86.txt  CMakeLists.android-x86_64.txt  CMakeLists.darwin-arm64.txt  CMakeLists.darwin-x86_64.txt  CMakeLists.linux-aarch64-cuda.txt  CMakeLists.linux-aarch64.txt  CMakeLists.linux-ppc64le-cuda.txt  CMakeLists.linux-ppc64le.txt  CMakeLists.linux-x86_64-cuda.txt  CMakeLists.linux-x86_64.txt  CMakeLists.linux.txt  CMakeLists.txt  CMakeLists.windows-x86_64-cuda.txt  CMakeLists.windows-x86_64.txt  recode_result.cpp  recode_result.h  unicode_table.cpp  unicode_table.h  unidata.cpp  unidata.h  utf8.cpp  utf8.h  utf8_ut.cpp  wide.cpp  wide.h  wide_specific.h  wide_sse41.cpp  wide_ut.cpp  ya.make
util/datetime/: CMakeLists.txt  base.cpp  base.h  base.pxd  base_ut.cpp  constants.cpp  constants.h  cputimer.cpp  cputimer.h  cputimer_ut.cpp  parser.cpp  parser.h  parser.rl6  parser_deprecated_ut.cpp  parser_ut.cpp  process_uptime.cpp  process_uptime.h  process_uptime_ut.cpp  strptime.cpp  systime.cpp  systime.h  uptime.cpp  uptime.h  uptime_ut.cpp
util/digest/: CMakeLists.txt  city.cpp  city.h  city_streaming.h  city_ut.cpp  fnv.cpp  fnv.h  fnv.pxd  fnv_ut.cpp  iterator.h  multi.cpp  multi.h  multi.pxd  multi_ut.cpp  multi_ut.pyx  murmur.cpp  murmur.h  murmur_ut.cpp  numeric.cpp  numeric.h  sequence.cpp  sequence.h  sequence_ut.cpp  ya.make
util/draft/: CMakeLists.android-arm.txt  CMakeLists.android-x86.txt  CMakeLists.darwin-arm64.txt  CMakeLists.linux-aarch64-cuda.txt  CMakeLists.linux-ppc64le-cuda.txt  CMakeLists.linux-ppc64le.txt  CMakeLists.linux-x86_64-cuda.txt  CMakeLists.linux-x86_64.txt  CMakeLists.linux.txt  CMakeLists.txt  CMakeLists.windows-x86_64-cuda.txt  CMakeLists.windows-x86_64.txt  bitutils.cpp  bitutils.h  bitutils_ut.cpp  date.cpp  date.h  date_ut.cpp  datetime.cpp  datetime.h  datetime_ut.cpp  enum.cpp  enum.h  enum_codegen.cpp  enum_codegen.h  enum_codegen_ut.cpp  estimators.cpp  estimators.h  file_utils.cpp  file_utils.h  holder_vector.cpp  holder_vector.h  holder_vector_ut.cpp  ip.h  math_utils.h  matrix.h  memory.cpp  memory.h  memory_ut.cpp  parse_utils.cpp  (+3 more)
util/folder/: CMakeLists.txt  dirent_win.c  dirent_win.h  dirut.cpp  dirut.h  dirut_ut.cpp  filelist.cpp  filelist.h  filelist_ut.cpp  fts.cpp  fts.h  fts_ut.cpp  fwd.h  iterator.cpp  iterator.h  iterator_ut.cpp  lstat_win.c  lstat_win.h  path.cpp  path.h  path.pxd  path_ut.cpp  path_ut.pyx  pathsplit.cpp  pathsplit.h  pathsplit_ut.cpp  tempdir.cpp  tempdir.h  tempdir_ut.cpp
util/generic/: adaptor.cpp  adaptor.h  adaptor_ut.cpp  algorithm.cpp  algorithm.h  algorithm_ut.cpp  array_ref.cpp  array_ref.h  array_ref.pxd  array_ref_ut.cpp  array_ref_ut.pyx  array_size.cpp  array_size.h  array_size_ut.cpp  bitmap.cpp  bitmap.h  bitmap_ut.cpp  bitops.cpp  bitops.h  bitops_ut.cpp  bt_exception.cpp  bt_exception.h  buffer.cpp  buffer.h  buffer_ut.cpp  cast.cpp  cast.h  (+195 more)
(+37452 files in other folders)
