[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catboost-mlx"
version = "0.1.0"
description = "CatBoost gradient boosted decision trees on Apple Silicon via Metal/MLX"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.0"]
coreml = ["coremltools>=7.0"]
onnx = ["onnx>=1.14"]
all = ["scikit-learn>=1.0", "coremltools>=7.0", "onnx>=1.14"]
dev = [
    "pytest>=7.0",
    "pandas>=1.3",
]

[tool.setuptools.packages.find]
include = ["catboost_mlx*"]

[tool.setuptools.package-data]
catboost_mlx = ["bin/*"]
