# util/BUILD.bazel
#
# yutil — Yandex utility library, the foundation of CatBoost.
#
# This single cc_library mirrors the CMake yutil target exactly.
# All sources and all headers are declared together so that Bazel's
# sandbox has the complete include tree during compilation.
# This is necessary because util/* sub-packages have circular header
# dependencies (e.g., util/system ↔ util/generic) that prevent
# splitting into separate packages.
#
# Build:  bazel build //util:yutil
# Test:   bazel test  //util/...

package(default_visibility = ["//visibility:public"])

# Header-only target: exposes all util headers without compiling anything.
# Used by contrib libs (zlib) that include util headers but are compiled
# before yutil itself, breaking the circular dependency.
cc_library(
    name = "yutil_hdrs",
    hdrs = glob(
        [
            "*.h",
            "charset/*.h",
            "datetime/*.h",
            "digest/*.h",
            "draft/*.h",
            "folder/*.h",
            "generic/*.h",
            "memory/*.h",
            "network/*.h",
            "random/*.h",
            "stream/*.h",
            "string/*.h",
            "system/*.h",
            "system/*.i",
            "thread/*.h",
        ],
        allow_empty = True,
    ),
    copts = ["-I."],
    includes = ["."],
    deps = [
        "//bazel/compat:libstlfwd",
        "//contrib/libs/linux-headers",
        "//contrib/libs/libc_compat",
    ],
)

cc_library(
    name = "yutil",
    srcs = [
        "datetime/base.cpp",
        "datetime/parser.cpp",
        "datetime/constants.cpp",
        "datetime/cputimer.cpp",
        "datetime/process_uptime.cpp",
        "datetime/systime.cpp",
        "datetime/uptime.cpp",
        "digest/city.cpp",
        "digest/fnv.cpp",
        "digest/multi.cpp",
        "digest/murmur.cpp",
        "digest/numeric.cpp",
        "digest/sequence.cpp",
        "folder/dirut.cpp",
        "folder/filelist.cpp",
        "folder/fts.cpp",
        "folder/fwd.cpp",
        "folder/iterator.cpp",
        "folder/path.cpp",
        "folder/pathsplit.cpp",
        "folder/tempdir.cpp",
        "generic/adaptor.cpp",
        "generic/algorithm.cpp",
        "generic/array_ref.cpp",
        "generic/array_size.cpp",
        "generic/bitmap.cpp",
        "generic/bitops.cpp",
        "generic/buffer.cpp",
        "generic/cast.cpp",
        "generic/deque.cpp",
        "generic/enum_cast.cpp",
        "generic/explicit_type.cpp",
        "generic/fastqueue.cpp",
        "generic/flags.cpp",
        "generic/function.cpp",
        "generic/function_ref.cpp",
        "generic/fwd.cpp",
        "generic/guid.cpp",
        "generic/hash.cpp",
        "generic/hash_multi_map.cpp",
        "generic/hash_primes.cpp",
        "generic/hash_set.cpp",
        "generic/hash_table.cpp",
        "generic/hide_ptr.cpp",
        "generic/intrlist.cpp",
        "generic/is_in.cpp",
        "generic/iterator.cpp",
        "generic/iterator_range.cpp",
        "generic/lazy_value.cpp",
        "generic/list.cpp",
        "generic/map.cpp",
        "generic/mapfindptr.cpp",
        "generic/maybe.cpp",
        "generic/mem_copy.cpp",
        "generic/noncopyable.cpp",
        "generic/object_counter.cpp",
        "generic/overloaded.cpp",
        "generic/ptr.cpp",
        "generic/queue.cpp",
        "generic/refcount.cpp",
        "generic/scope.cpp",
        "generic/serialized_enum.cpp",
        "generic/set.cpp",
        "generic/singleton.cpp",
        "generic/size_literals.cpp",
        "generic/stack.cpp",
        "generic/store_policy.cpp",
        "generic/strbuf.cpp",
        "generic/strfcpy.cpp",
        "generic/string.cpp",
        "generic/typelist.cpp",
        "generic/typetraits.cpp",
        "generic/utility.cpp",
        "generic/va_args.cpp",
        "generic/variant.cpp",
        "generic/vector.cpp",
        "generic/xrange.cpp",
        "generic/yexception.cpp",
        "generic/ylimits.cpp",
        "generic/ymath.cpp",
        "memory/addstorage.cpp",
        "memory/alloc.cpp",
        "memory/blob.cpp",
        "memory/mmapalloc.cpp",
        "memory/pool.cpp",
        "memory/segmented_string_pool.cpp",
        "memory/segpool_alloc.cpp",
        "memory/smallobj.cpp",
        "memory/tempbuf.cpp",
        "network/address.cpp",
        "network/endpoint.cpp",
        "network/hostip.cpp",
        "network/init.cpp",
        "network/interface.cpp",
        "network/iovec.cpp",
        "network/ip.cpp",
        "network/nonblock.cpp",
        "network/pair.cpp",
        "network/poller.cpp",
        "network/pollerimpl.cpp",
        "network/sock.cpp",
        "network/socket.cpp",
        "random/common_ops.cpp",
        "random/easy.cpp",
        "random/entropy.cpp",
        "random/fast.cpp",
        "random/init_atfork.cpp",
        "random/lcg_engine.cpp",
        "random/mersenne32.cpp",
        "random/mersenne64.cpp",
        "random/mersenne.cpp",
        "random/normal.cpp",
        "random/random.cpp",
        "random/shuffle.cpp",
        "stream/aligned.cpp",
        "stream/buffer.cpp",
        "stream/buffered.cpp",
        "stream/direct_io.cpp",
        "stream/file.cpp",
        "stream/format.cpp",
        "stream/fwd.cpp",
        "stream/hex.cpp",
        "stream/holder.cpp",
        "stream/input.cpp",
        "stream/labeled.cpp",
        "stream/length.cpp",
        "stream/mem.cpp",
        "stream/multi.cpp",
        "stream/null.cpp",
        "stream/output.cpp",
        "stream/pipe.cpp",
        "stream/printf.cpp",
        "stream/str.cpp",
        "stream/tee.cpp",
        "stream/tempbuf.cpp",
        "stream/tokenizer.cpp",
        "stream/trace.cpp",
        "stream/walk.cpp",
        "stream/zerocopy.cpp",
        "stream/zerocopy_output.cpp",
        "stream/zlib.cpp",
        "string/ascii.cpp",
        "string/builder.cpp",
        "string/cast.cpp",
        "string/cstriter.cpp",
        "string/escape.cpp",
        "string/hex.cpp",
        "string/join.cpp",
        "string/printf.cpp",
        "string/reverse.cpp",
        "string/split.cpp",
        "string/strip.cpp",
        "string/strspn.cpp",
        "string/subst.cpp",
        "string/type.cpp",
        "string/util.cpp",
        "string/vector.cpp",
        "str_stl.cpp",
        "system/align.cpp",
        "system/atexit.cpp",
        "system/backtrace.cpp",
        "system/byteorder.cpp",
        "system/compat.cpp",
        "system/compiler.cpp",
        "system/condvar.cpp",
        "system/context.cpp",
        "system/cpu_id.cpp",
        "system/daemon.cpp",
        "system/datetime.cpp",
        "system/direct_io.cpp",
        "system/dynlib.cpp",
        "system/env.cpp",
        "system/error.cpp",
        "system/event.cpp",
        "system/execpath.cpp",
        "system/fasttime.cpp",
        "system/fhandle.cpp",
        "system/file.cpp",
        "system/file_lock.cpp",
        "system/filemap.cpp",
        "system/flock.cpp",
        "system/fs.cpp",
        "system/fstat.cpp",
        "system/getpid.cpp",
        "system/guard.cpp",
        "system/hi_lo.cpp",
        "system/hostname.cpp",
        "system/hp_timer.cpp",
        "system/info.cpp",
        "system/interrupt_signals.cpp",
        "system/madvise.cpp",
        "system/maxlen.cpp",
        "system/mem_info.cpp",
        "system/mincore.cpp",
        "system/mktemp.cpp",
        "system/mktemp_system.cpp",
        "system/mlock.cpp",
        "system/mutex.cpp",
        "system/nice.cpp",
        "system/pipe.cpp",
        "system/platform.cpp",
        "system/progname.cpp",
        "system/protect.cpp",
        "system/rusage.cpp",
        "system/rwlock.cpp",
        "system/sanitizers.cpp",
        "system/sem.cpp",
        "system/shellcommand.cpp",
        "system/shmat.cpp",
        "system/sigset.cpp",
        "system/spinlock.cpp",
        "system/spin_wait.cpp",
        "system/src_location.cpp",
        "system/sys_alloc.cpp",
        "system/sysstat.cpp",
        "system/tempfile.cpp",
        "system/thread.cpp",
        "system/tls.cpp",
        "system/type_name.cpp",
        "system/types.cpp",
        "system/unaligned_mem.cpp",
        "system/user.cpp",
        "system/utime.cpp",
        "system/valgrind.cpp",
        "system/yassert.cpp",
        "system/yield.cpp",
        "thread/factory.cpp",
        "thread/fwd.cpp",
        "thread/lfqueue.cpp",
        "thread/lfstack.cpp",
        "thread/pool.cpp",
        "thread/singleton.cpp",
        "ysafeptr.cpp",
        "ysaveload.cpp",
    ],
    # All headers must be declared so Bazel's sandbox includes them.
    # The glob crosses all util/* subdirectories intentionally.
    hdrs = glob(
        [
            "*.h",
            "charset/*.h",
            "datetime/*.h",
            "digest/*.h",
            "draft/*.h",
            "folder/*.h",
            "generic/*.h",
            "memory/*.h",
            "network/*.h",
            "random/*.h",
            "stream/*.h",
            "string/*.h",
            "system/*.h",
            "system/*.i",
            "thread/*.h",
        ],
        allow_empty = True,
    ),
    # -I. makes #include <util/...> resolve from workspace root.
    # includes=["."] adds util/ to -isystem for relative includes within util/*.
    copts = ["-I."],
    includes = ["."],
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lrt",
    ],
    deps = [
        "//bazel/compat:libstlfwd",
        "//contrib/libs/linux-headers",
        "//util/charset:charset",
        "//util/charset:charset_sse41",
        "//contrib/libs/zlib:zlib",
        "//contrib/libs/double-conversion:double-conversion",
        "//contrib/libs/libc_compat:libc_compat",
    ],
)

# ── Tests ─────────────────────────────────────────────────────────────────────
# A selection of util/generic unit tests that exercise the core library.
# Run with: bazel test //util:generic_tests

load("//bazel:rules.bzl", "yunit_test")

yunit_test(
    name = "generic_tests",
    srcs = [
        "generic/array_size_ut.cpp",
        "generic/bitops_ut.cpp",
        "generic/cast_ut.cpp",
        "generic/maybe_ut.cpp",
        "generic/ptr_ut.cpp",
        "generic/vector_ut.cpp",
    ],
    deps = ["//build/cow/on:cow_on"],
)

yunit_test(
    name = "string_tests",
    srcs = [
        "string/ascii_ut.cpp",
        "string/builder_ut.cpp",
        "string/cast_ut.cpp",
        "string/escape_ut.cpp",
        "string/join_ut.cpp",
        "string/split_ut.cpp",
        "string/strip_ut.cpp",
        "string/subst_ut.cpp",
        "string/type_ut.cpp",
        "string/util_ut.cpp",
        "string/vector_ut.cpp",
    ],
    deps = ["//build/cow/on:cow_on"],
)

yunit_test(
    name = "datetime_tests",
    srcs = [
        "datetime/base_ut.cpp",
    ],
    deps = ["//build/cow/on:cow_on"],
)
