# bazel/compat/BUILD.bazel
# Compatibility headers for building CatBoost with GCC/libstdc++.

package(default_visibility = ["//visibility:public"])

# Provides <stlfwd> for GCC builds.
# The file is named "stlfwd" (no extension) to match the #include <stlfwd>.
cc_library(
    name = "gcc_stlfwd",
    hdrs = ["stlfwd"],
    # includes=["."] makes Bazel add bazel/compat/ to -isystem,
    # so #include <stlfwd> resolves to this file.
    includes = ["."],
)
