# bazel/compat/BUILD.bazel
#
# Compatibility shims for building CatBoost with GCC + libstdc++.

package(default_visibility = ["//visibility:public"])

# Provides <stlfwd> for GCC/libstdc++ builds.
# Named "libstlfwd" to avoid the self-reference cycle that occurs when
# a cc_library named "stlfwd" lists "stlfwd" (the file) in hdrs=[].
cc_library(
    name = "libstlfwd",
    hdrs = ["stlfwd"],
    includes = ["."],
)
