[package]
name = "catboost"
version = "0.1.1"
authors = ["Sergey Kiselev <kiselev.sg@gmail.com>"]
edition = "2021"
description = "CatBoost Rust Package"
documentation = "https://catboost.ai/docs/en/concepts/apply-rust"
repository = "https://github.com/catboost/catboost"
license = "Apache-2.0"

[dependencies]
catboost-sys = { path = "catboost-sys", version = "0.1.1"}
# catboost-sys = "0.1"
approx = "0.5.1"
libc = "0.2"

[features]
gpu = ["catboost-sys/gpu"]
use_prebuilt = ["catboost-sys/use_prebuilt"]

